--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
   web:
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: docker/nginx/Dockerfile
     ports:
-      - "8080:80"
+      - "127.0.0.1:9000:80"
     volumes:
       - .:/app/
     links:
@@ -18,8 +18,8 @@ services:
     build:
       context: .
       dockerfile: docker/db/Dockerfile
-    ports:
-      - "5433:5432"
+    #ports:
+      #- "9001:5432"
     networks:
       - pg-network
   
@@ -32,14 +32,14 @@ services:
     networks:
       - pg-network
   
-  pgadmin-wdpai:
+  pgadmin-programmar:
     image: dpage/pgadmin4:latest
     container_name: pg-admin2
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@example.com
       PGADMIN_DEFAULT_PASSWORD: admin
     ports:
-      - "5050:80"
+      - "127.0.0.1:9002:80"
     networks:
       - pg-network
   
