--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
     server_name _;
     server_tokens off;
 
-    root /src/app/src;
+    root /app/src;
     index index.php;
 
     location / {
@@ -18,6 +18,6 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
-        fastcgi_param SCRIPT_FILENAME /src/app/src$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME /app/src$fastcgi_script_name;
     }
 }
