added courses service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,7 +51,16 @@ services:
     networks:
       - pg-network
 
+  content-service:
+    build: ./ProgrammarContentService
+    ports:
+      - "8000:8000"
+    networks:
+      - app-network
+
 networks:
+  app-network:
+    driver: bridge
   pg-network:
 
 volumes:
