--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,6 +56,8 @@ services:
     build: ./ProgrammarContentService
     ports:
       - "8000:8000"
+    volumes:
+      - ./ProgrammarContentService/data:/app/data
     networks:
       - app-network
 
