--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -4,11 +4,18 @@ server {
     server_name _;
     server_tokens off;
 
-    root /src/app;
+    root /src/app/src;
     index index.php;
+
+    error_page 403 /public/views/403.html;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
+    }
+
+    location ~ ^/(controllers|repositories|services|models|docker) {
+        deny all;
+        return 403;
     }
 
     location ~ /\. {
