--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -35,5 +35,6 @@ RUN apk add --no-cache --virtual .run-deps $RUN_DEPS
 
 RUN echo 'memory_limit = 512M' >> /usr/local/etc/php/conf.d/docker-php-memlimit.ini;
 
-# Copy the application code
 COPY . /src/app
+
+RUN composer install --no-interaction --optimize-autoloader
