--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -25,6 +25,6 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
-        fastcgi_param SCRIPT_FILENAME /app/src$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME /src/app/src$fastcgi_script_name;
     }
 }
